--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/CSS/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Font Awesome and google font-->
+    <script
+      src="https://kit.fontawesome.com/1fa7dd7bb9.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Raleway:ital,wght@0,100;1,100&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/CSS/style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h1 class="heading">
+      <img class="logo" src="assets/images/favicon (1).ico" alt="logo">
+      WORLD CUP WINNERS CHECK
+    </h1>
+
+    <div class="Guess-area"></div>
+
+    <div class="attempt-area"></div>
+    <P class="result">Number of Pass Attempts <span id="score">0</span></P>
+    <P class="result">Number of Failed Attempts <span id="incorrectscore">0</span></P>
 
     <script src="assets/js/script.js"></script>
-</body>
+  </body>
 </html>
